--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+# Datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.h2.console.path=/h2
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
 
 # CSV Data
 initial.data.csv.location=src/main/resources/
