--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<org.springdoc.version>1.6.12</org.springdoc.version>
 		<org.mapstruct.version>1.5.3.Final</org.mapstruct.version>		
 		<org.apache.commons.version>1.9.0</org.apache.commons.version>
+		<log4j.version>1.2.17</log4j.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 	</properties>
 	<dependencies>
@@ -64,6 +65,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>${org.apache.commons.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 
