--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 # Datasource
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
+
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
 # CSV Data
 initial.data.csv.location=src/main/resources/
 initial.data.csv.file=movielist.csv
+
+
