--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>golden-raspberry-awards-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>golden-raspberry-awards-api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Golden Raspberry Awards API</description>
 	<properties>
 		<java.version>17</java.version>
 		<org.springdoc.version>1.6.12</org.springdoc.version>
