--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# Project
+project.version=@project.version@
+project.description=@project.description@
+spring.profiles.active=@spring.profiles.active@
+
+# Server
+server.port=8080
+server.servlet.contextPath=/api
+server.error.include-message=always
+
 # Datasource
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
