--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.profiles.active=@spring.profiles.active@
 
 # Server
 server.port=8080
-server.servlet.contextPath=/api
+server.servlet.contextPath=/api/v1
 server.error.include-message=always
 
 # Datasource
